--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=demo-mvc
+
+
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/web_mvc?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
